2006-05-10  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	* lib/missing: Remove superfluous quotes.  Replace all uses of
	`[' by `test', for consistency, and for..
	* tests/missing5.test: ..this new test.
	* tests/Makefile.am: Update.

	* lib/missing (sed_minuso, sed_output): New variables.
	(autom4te, help2man, makeinfo): Use them.  Unifies detection of
	`-o FILE', `--output FILE', `--output=FILE', stricter regex.
	Fixes `missing' to detect `--output' for help2man.  Fixes
	PR automake/483.  Report by Dennis J. Linse.
	(autom4te): Document in `missing --help'.
	* THANKS: Update.

2006-04-26  Thien-Thi Nguyen  <ttn@gnu.org>  (tiny change)

	* doc/automake.texi (Dependency Tracking Evolution): Fix typo.

2006-04-25  Stepan Kasal  <kasal@ucw.cz>

	* lib/install-sh: Simplify the expr implementation of dirname.

2006-04-24  Paul Eggert  <eggert@cs.ucla.edu>

	* lib/install-sh: Handle --, and diagnose unknown options.
	* m4/mkdirp.m4 (AM_PROG_MKDIR_P): In the normal case, set
	mkdir_p='mkdir -p', not to 'mkdir -p --', for consistency with
	the other ways that mkdir_p might be set.

2006-04-21  Alexandre Duret-Lutz  <adl@gnu.org>

	* m4/amversion.in (_AM_AUTOCONF_VERSION): New macro.
	(AM_SET_CURRENT_AUTOMAKE_VERSION): Call it.
	* aclocal.in (trace_used_macros): Trace _AM_AUTOCONF_VERSION.
	(write_aclocal): Output a check for Autoconf's version in aclocal.m4.
	Doing so ensures that users cannot build configure and Makefiles
	with two different autoconf versions.  Report from Noah Misch.
	* tests/missing4.test: New file.
	* tests/Makefile.am (TESTS): Add it.

2006-04-20  Paul Lunau  <temp@lunau.me.uk>  (tiny change)
	    Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	* lib/am/dejagnu.am (check-DEJAGNU): Fail when at least one test
	failed, instead of when the last one failed (PR automake/488).
	Report from Paul Lunau.
	* tests/dejagnu4.test: Update to expose this.
	* THANKS: Update.

2006-04-19  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
