@@ -1,5 +1,5 @@
 #! /bin/sh
-# Copyright (C) 2003  Free Software Foundation, Inc.
+# Copyright (C) 2003, 2006  Free Software Foundation, Inc.
 #
 # This file is part of GNU Automake.
 #
@@ -89,6 +89,7 @@ test `ls -1t sub/Makefile.in foo | sed 1q` = sub/Makefile.in
 touch fragment.inc
 $sleep
 touch foo
+$sleep
 $ACLOCAL -I m4
 $AUTOMAKE --no-force
 # Only ./Makefile.in should change.
@@ -101,6 +102,7 @@ grep README Makefile.in && exit 1
 : > README
 $sleep
 touch foo
+$sleep
 $AUTOMAKE --no-force
 # Even if no dependency change, the content changed.
 test `ls -1t Makefile.in foo | sed 1q` = Makefile.in
@@ -111,6 +113,7 @@ grep README Makefile.in
 : > sub/Makefile.in
 $sleep
 touch foo
+$sleep
 $ACLOCAL -I m4
 $AUTOMAKE --no-force
 # Only sub/Makefile.in should change.
