@@ -1,5 +1,10 @@
 2006-05-10  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
 
+	* tests/aclocal7.test: Add `$sleep's between file touching
+	and automake resp aclocal+automake invocations, to ensure
+	they complete with a time stamp strictly later than the touched
+	file.
+
 	* lib/missing: Remove superfluous quotes.  Replace all uses of
 	`[' by `test', for consistency, and for..
 	* tests/missing5.test: ..this new test.
